src/test/ui/macros/issue-68060.stderr
error: attribute should be applied to a function
  --> $DIR/issue-68060.rs:4:13
   |
LL |             #[target_feature(enable = "")]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |             |_| (),
   |             ------ not a function

error: aborting due to previous error

